# clox2

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  fib.lox  gentree.py  input.lox  main.c  requirements.txt  test.json  test.lox
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml
apps/clox/: CMakeLists.txt
apps/clox/args/: CMakeLists.txt
apps/clox/args/src/: args.c
apps/clox/args/test/: CMakeLists.txt  arguments.c
apps/clox/src/: commands.c  commands.h  exitcode.h  main.c
apps/native/: CMakeLists.txt
apps/native/src/: config.c  config.h  generate.c  generate.h  main.c
cmake/: CloxNative.cmake  FetchCMocka.cmake  FetchJannson.cmake  Utils.cmake
dlibs/: .gitignore  Makefile  lib.c  main.c
dlibs2/: .gitignore  Makefile  alpha.c  main.c  main2.c  spammodule.c  test.c
docs/: Makefile  generate.py  grammar.ebnf
h/: binary.h  chunk.h  common.h  compiler.h  debug.h  load.h  memory.h  native.h  object.h  output.h  scanner.h  table.h  value.h  vm.h
include/: visibility.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/common/: arena.h  ilist.h  util.h
lib/common/src/: arena.c  inputfile.c
lib/common/test/: CMakeLists.txt
lib/common/test/arena/: arena_functions.h
lib/impl/: CMakeLists.txt
lib/impl/include/impl/: binary.h  chunk.h  compiler.h  debug.h  memory.h  native.h  object.h  vm.h
lib/impl/public/include/clox/: clox.h  native.h  object.h  result.h  table.h  valarray.h  value.h  vm.h
lib/impl/src/: binary.c  chunk.c  compiler.c  debug.c  memory.c  native.c  object.c  table.c  value.c  vm.c
lib/include/: binary.h  chunk.h  common.h  compiler.h  debug.h  memory.h  native.h  object.h  scanner.h  table.h  value.h  vm.h
lib/math/: CMakeLists.txt  spec.json
lib/math/src/: math.c
lib/module/: test.lox
lib/module/math/: CMakeLists.txt  spec.json
lib/module/math/src/: math.c
lib/module/reflect/: CMakeLists.txt  spec.json
lib/module/reflect/src/: reflect.c
lib/module/system/: CMakeLists.txt  spec.json
lib/module/system/src/: system.c
lib/module/time/: CMakeLists.txt  spec.json
lib/module/time/src/: time.c
lib/reflect/: CMakeLists.txt  spec.json
lib/reflect/src/: reflect.c
lib/scanner/: CMakeLists.txt
lib/scanner-flex/: CMakeLists.txt
lib/scanner-flex/include/scanner/: scanner.h
lib/scanner-flex/src/: scanner.c
lib/scanner/common/: CMakeLists.txt
lib/scanner/common/include/scanner/: scanner.h
lib/scanner/common/test/: CMakeLists.txt  tokens.c
lib/scanner/default/: CMakeLists.txt
lib/scanner/default/src/: scanner.c
lib/scanner/default/test/: CMakeLists.txt
lib/scanner/flex/: CMakeLists.txt
lib/scanner/flex/misc/: scanner_spec.l
lib/scanner/flex/src/: scanner.c
lib/scanner/flex/test/: CMakeLists.txt
lib/scanner/include/scanner/: scanner.h  token.h
lib/scanner/misc/: generateScanner.py  scanner_spec.toml
lib/scanner/src/: scanner.c  scanner_priv.h
lib/src/: debug.c  memory.c  table.c  value.c  vm.c
lib/system/: CMakeLists.txt  spec.json
lib/system/src/: system.c
lib/test/scanner/: CMakeLists.txt  tokens.c
lib/time/: CMakeLists.txt  spec.json
lib/time/src/: time.c
parser_bison/: .gitignore  Makefile  TODO  input.lox  main.c  parser_spec.y  scanner_spec.l
parser_bison/include/: token.h
public/: CMakeLists.txt
public/include/: table.h
public/include/clox/: clox.h  native.h  object.h  result.h  valarray.h  value.h  vm.h
scripts/: coverage.sh
src/: CMakeLists.txt  binary.c  chunk.c  compiler.c  debug.c  load.c  memory.c  native.c  object.c  output.c  scanner.c  table.c  value.c  vm.c
src/apps/clox/: CMakeLists.txt  commands.c  main.c
src/apps/clox/include/: commands.h
src/apps/cloxnc/: CMakeLists.txt  config.c
src/apps/native/: CMakeLists.txt  config.c  generate.c  main.c
src/apps/native/include/: config.h  generate.h
src/args/: CMakeLists.txt  args.c
src/args/include/: args.h
src/common/: CMakeLists.txt  arena.c  inputfile.c
src/common/include/: arena.h  ilist.h  inputfile.h  util.h
src/impl/: CMakeLists.txt
src/impl/include/: binary.h  chunk.h  common.h  compiler.h  debug.h  memory.h  native.h  object.h  valarray.h  value.h  vm.h
src/impl/scanner/: CMakeLists.txt
src/impl/scanner-flex/: CMakeLists.txt
src/impl/scanner-flex/include/: scanner.h  token.h
src/impl/scanner-flex/misc/: scanner_spec.l
src/impl/scanner-flex/src/: scanner.c
src/impl/scanner/include/: scanner.h  token.h
src/impl/scanner/misc/: generateScanner.py  scanner_spec.toml
src/impl/scanner/src/: scanner.c  scanner_priv.c  scanner_priv.h
src/impl/src/: binary.c  chunk.c  compiler.c  debug.c  memory.c  native.c  object.c  scanner.c  table.c  value.c  vm.c
src/scanner/: CMakeLists.txt
src/scanner-flex/: CMakeLists.txt
src/scanner-flex/include/: scanner.h
src/scanner-flex/misc/: scanner_spec.l
src/scanner/include/: scanner.h
src/scanner/misc/: generateScanner.py  scanner_spec.toml
src/scanner/src/: scanner.c  scanner_priv.c  scanner_priv.h
test/: CMakeLists.txt
test/arena/: CMakeLists.txt  arena.c  arena_functions.h  arena_tests.h
test/misc/: CMakeLists.txt  arguments.c  arguments.cpp
test/scanner/: CMakeLists.txt  tokens.c
